2000-06-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* eval.c: Updated comment above scm_map.

2000-06-14  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.c (scm_protect_object): Avoid looking up the object handle
	twice.
	(scm_unprotect_object): Abort if scm_unprotect_object is called on
	an unprotected object.

2000-06-14  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (scm_unprotect_object): fix a nasty typo bug (thanks to
 	Dirk Herrmann).

2000-06-14  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* socket.c (scm_getsockopt): Changed type for `optlen' from int to
	size_t.
	(scm_accept, scm_getsockname, scm_getpeername, scm_recvfrom):
	Ditto for `tmp_size'.
	(scm_addr_buffer_size): Changed type from int to size_t.

	* random.c: #include <string.h>.  (Needed by memcpy.)

	* guile-snarf.awk.in: Replace the dot_doc_file arg with "-",
	indicating stdin, instead of "" and don't reset ARGC.  This is a
	workaround for `nawk' in AIX 4.3 on RS6000 but, as far as I know,
	it is correct, and perhaps even better.

2000-06-14  Gary Houston  <ghouston@arglist.com>

	* scmsigs.c (scm_init_scmsigs): if HAVE_SIGINTERRUPT is not
	defined, add SA_RESTART to the sigaction flags correctly
	(thanks to Dale P. Smith).

2000-06-13  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* strings.c: #include <string.h>. (Thanks to Bill Schottstaedt.)

	* net_db.c (scm_resolv_error): Only use macro NETDB_INTERNAL if
	defined. It isn't on sgi irix 5.3.  (Thanks to Bill Schottstaedt.)

	* Makefile.am (.c.doc): Pipe output (the .x contents) to /dev/null.

2000-06-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* fports.c (scm_setvbuf): Use `free' instead of `scm_must_free'
	since read and write buffers are allocated by `malloc'.

	* Makefile.am: Removed old test code.

	* gh_test_c.c, gh_test_repl.c: Removed.

2000-06-12  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* iselect.c (SCM_NLONGBITS): Add workaround for the Sun 4.2
	compiler.

	* inet_aton.c (inet_aton): Cast init value for `cp'.
