@@ -1,3 +1,8 @@
+2000-06-15  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* gc.c (scm_unprotect_object):  The reference count is guaranteed
+	to be a positive number.
+
 2000-06-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>
 
 	* eval.c: Updated comment above scm_map.
